Apply CSS styling to all elements  of the HTML file

--- a/style.css
+++ b/style.css
@@ -37,11 +37,86 @@ button{
     margin: 5px 0;
 
 }
-.main--text{
+.p--text{
   display:block;
   margin: 0 auto;
   margin-bottom: 8px;
   width: 80%;
   border: 2px solid black;
   font-size: 1.5em;
+}
+.text--references{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.facebook--icon, .twitter--icon, .share--icon{
+  border: 2.5px solid black;
+  padding: 2px 5px;
+  font-size: 12px;
+  font-weight: bold;
+}
+.main--image{
+  display: flex;
+  justify-content: center;
+  margin: 10px 0px;
+}
+.main--text{
+  display:block;
+  width: 80%;
+  margin: 0 auto;
+
+}
+.heading--fifth{
+  margin:0px
+}
+.main--text--p{
+  margin:0px;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 0.8em;
+  text-align: center;
+}
+.links--container{
+
+  width: 80%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border: 1px solid black;
+
+
+}
+.link--heading{
+margin-bottom: 0;
+text-align: center;
+}
+.ul--container{
+  margin-top: 0;
+  list-style-type:'- ';
+
+}
+.link--item{
+  color: rgb(95, 23, 241)
+}
+
+.footer{
+
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 10px;
+  padding: 10px 0px;
+}
+.logo{
+  width:150px;
+  border: 2px solid black;
+}
+.ul--footer{
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  gap:8px;
+  font-size: 12px;
+  font-weight: bold;
 }
